# QT5Landlords

./: CMakeLists.txt  README.md  card.cpp  card.h  cardpanel.h  cards.h  gamecontrol.cpp  player.h  playhand.cpp  robot.cpp  robot.h  userplayer.h
